Fix the alignment of Checkbox and Radio Button when they don't have a label

--- a/packages/core/src/radio-button/RadioButton.css
+++ b/packages/core/src/radio-button/RadioButton.css
@@ -10,7 +10,7 @@
   font-family: var(--salt-text-fontFamily);
   font-weight: var(--salt-text-fontWeight);
 
-  --radioButton-icon-marginTop: calc((var(--salt-text-lineHeight) - var(--salt-size-selectable)) / 2);
+  --radioButton-icon-margin: calc((var(--salt-text-lineHeight) - var(--salt-size-selectable)) / 2);
 }
 
 /* Styles applied when RadioButton is disabled */
@@ -31,15 +31,14 @@
   position: absolute;
   height: var(--salt-size-selectable);
   opacity: 0;
-  margin: var(--radioButton-icon-marginTop) 0 0 0;
   padding: 0;
   width: var(--salt-size-selectable);
   z-index: var(--salt-zIndex-default);
-  box-sizing: border-box;
 }
 
+.saltRadioButton-input,
 .saltRadioButtonIcon {
-  margin-top: var(--radioButton-icon-marginTop);
+  margin: var(--radioButton-icon-margin) 0;
   box-sizing: border-box;
 }
 
